# studieveileder

./: .gitignore
backend/: .env.example  .gitignore  add_semester.py  cleanup_subjects.py  embedding_db.py  guide.html  guide.ipynb  main.py  populate_db.py  pyproject.toml  query.py  requirements.txt
backend/ingestion/: combine_grading.py  educations.py  embedding_db.py  graph_database.py
backend/parsing/: parse_single.py  parse_subjects.py
backend/parsing-python/: combine_grading.py  educations.py  parse_website.py  studier.txt  subjects.txt  subjects_coourses_relation_txt.py  subjects_courses_relation.py
backend/parsing-python/grades/: Karakterfordeling_2016.xlsx  Karakterfordeling_2017.xlsx  Karakterfordeling_2018.xlsx  Karakterfordeling_2019.xlsx  Karakterfordeling_2020.xlsx  Karakterfordeling_2021.xlsx  Karakterfordeling_2022.xlsx  Karakterfordeling_2023.xlsx  Karakterfordeling_2024.xlsx  Karakterfordeling_2025.xlsx
backend/parsing-python/nmbu/: nmbu_data.json  scrapy.cfg
backend/parsing-python/nmbu/nmbu/: items.py  middlewares.py  pipelines.py  (+1 more)
backend/parsing-python/related_documents/: eksamen.txt  fusk-og-plagiering-ved-nmbu.txt  gradsoppgave-bachelor-og-masteroppgaver-ved-nmbu.txt  kunstig-intelligens-ki-hjelpemidler-sitering-og-referering.txt  lov1.txt  permisjon.txt  retningslinjer-behandling-av-mistanke-om-fusk-eller-annen-uredelig-opptreden-ved-nmbu.txt  retningslinjer-bruk-av-kunstig-intelligens-ki-ved-nmbu.txt  retningslinjer-nmbus-nemnd-studentsaker.txt  slik-soker-du-utveksling.txt  velkommen-som-nettstudent.txt  velkommen-som-ny-student.txt
(+22 files in other folders)
