[project]
requires-python = "==3.11.8"
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "environ>=1.0",
    "numpy>=2.4.0",
    "fastapi>=0.115.0",
    "openai>=2.6.1",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.23.0",
    "uvicorn>=0.34.0",
]
