[project]
requires-python = ">=3.11,<3.12"
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "environ>=1.0",
    "numpy>=2.4.0",
    "fastapi>=0.115.0",
    "openai>=2.6.1",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.23.0",
    "uvicorn>=0.34.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.8",
    "scipy>=1.16.3",
    "scrapy>=2.14.1",
    "psycopg[binary]>=3.3.2",
    "pgvector>=0.4.2",
]
